--- a/signup.html
+++ b/signup.html
@@ -4,36 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
     <title>Friendly Ghost | Sign Up</title>
 </head>
-<body>
+<body class="bg-grey">
     <header class="p-3 bg-dark text-center">
-        <h2>Friendly Ghost</h2>
+        <h2 class="text-light">Friendly Ghost</h2>
     </header>
     <main>
         <section>
-            <div class="container flex flex-row">
-                <img src="images.jpeg" alt="Image">
-                <form action="" method="post">
-                    <div>
-                        <div class="flex flex-col">
-                            <label for="first-name">
-                            <input type="text" name="first_name" id="first-name"></label>
+            <div class="container bg-grey flex flex-row">
+                <div id="snakes">
+                    <img id="bg" src="green-snake-wrapped-around-tree-branch-has-beautiful-color-199084238.jpg" alt="Image">                </div>
+                <div class="p-1">
+                    <p class="mb-2 fw-500 font-lg">
+                        Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. Non, qui?
+                    </p>
+                    <form action="" method="post" class="bg-light">
+                        <div class="grid gap-1 grid-2">
+                            <div class="flex flex-col">
+                                <label for="first-name">First Name</label>
+                                <input required type="text" minlength="2" maxlength="20" name="first_name" id="first-name">
+                            </div>
+                            <div class="flex flex-col">
+                                <label for="last-name">Last Name</label>
+                                <input required type="text" minlength="2" maxlength="20" name="last_name" id="last-name">
+                            </div>
+                            <div class="flex flex-col">
+                                <label for="email">Email</label>
+                                <input required type="email" minlength="8" maxlength="30" name="email" id="email">
+                            </div>
+                            <div class="flex flex-col">
+                                <label for="phone">Phone</label>
+                                <input required type="tel" minlength="10" maxlength="10" name="phone" id="phone">
+                            </div>
+                            <div class="flex flex-col">
+                                <label for="password-1">Password</label>
+                                <input required type="password" minlength="12" maxlength="24" name="password_1" id="password-1">
+                            </div>
+                            <div class="flex flex-col">
+                                <label for="password-2">COnfirm Password</label>
+                                <input required type="password" minlength="12" maxlength="24" name="password_2" id="password-2">
+                            </div>
                         </div>
-                        <div class="flex flex-col">
-                            <label for="last-name">
-                            <input type="text" name="last_name" id="last-name"></label>
-                        </div>
-                        <div class="flex flex-col">
-                            <label for="password-1">
-                            <input type="password" name="password_1" id="password-1"></label>
-                        </div>
-                        <div class="flex flex-col">
-                            <label for="password-2">
-                            <input type="password" name="password_2" id="password-2"></label>
-                        </div>
-                    </div>
-                </form>
+                        <button class="btn bg-dark text-light p-1 mt-2" type="submit">Register</button>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
